# ET-Gen-AI

./: .env.example  .gitignore  AGENTS.md  DEMO_SPEECH.md  README.md  verify_fixes.py
backend/: api_server.py  chat_bridge.py  pyproject.toml  test_integration.py  test_integration_clean.py
backend/agents/coordinator/: __init__.py  ai_endpoint.py  ai_responder.py  coordinator.py
backend/agents/dhan_sarthi/: ai_endpoint.py  ai_responder.py  coordinator.py
backend/agents/life_event/: __init__.py
backend/agents/money_health/: __init__.py
backend/agents/partner_finance/: __init__.py
backend/agents/retirement_pro/: __init__.py
backend/agents/tax_master/: __init__.py  tax_calculator.py
backend/bots/: telegram_bot.py
backend/tests/: comprehensive_agent_test.py  deep_agent_test.py  e2e_data_flow_test.py  e2e_test.py  greeting_test.py  sanity_check.py  test_bridge.py  test_yojana.py
frontend/: package.json
frontend/__tests__/: api-routes.test.ts
frontend/prisma/: schema.prisma
frontend/prisma/migrations/20260329143916_simple_auth/: migration.sql
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/agents/: page.tsx
frontend/src/app/agents/bazaar/: page.tsx
frontend/src/app/agents/compliance-helper/: page.tsx
frontend/src/app/agents/coordinator/: page.tsx
frontend/src/app/agents/dhan-sarthi/: page.tsx
frontend/src/app/agents/life-goals/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/components/: CardSwap.css  CardSwap.tsx  ClientLayout.tsx
frontend/src/lib/: api.ts
(+19 files in other folders)
