[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "casparser>=0.8.1",
    "fastapi>=0.135.0",
    "mftool>=3.2",
    "numpy>=2.2.0",
    "pandas>=2.3.0",
    "plotly>=6.6.0",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=21.0",
    "requests>=2.32.0",
    "scipy>=1.11.0",
    "streamlit>=1.55.0",
    "uvicorn>=0.42.0",
    "yfinance>=1.2.0",
]
